syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.github.wutut.grpc";
option java_outer_classname = "AudioInfoProto";


package AudioInfoGrpc;
service AudioInfo {
  rpc transinfo (AudioInfoRequest) returns (AudioInfoReply) {}
}

message AudioInfoRequest {
  string name = 1;
  bool detected = 2;
  message MicInfo{
    string micname = 1;
    double probability = 2;
  }
  repeated MicInfo micinfos = 3;
}

message AudioInfoReply {
  string timestamp = 1;
  bool detected = 2;
  message MicInfo{
    string micname = 1;
    double probability = 2;
  }
  repeated MicInfo micinfos = 3;
}
